# todo

./: .gitignore  LICENSE  NOTICE  README.md  invoke.ps1  pyproject.toml  sonar-project.properties
.github/workflows/: release-msi.yml
assets/: todo.desktop
docs/: README.md  index.html  styles.css
packaging/windows/: build-msi.ps1  todo.spec  todo.wxs
pipelines/templates/stages/: build.yml
scripts/: get_msi_product_code.ps1
src/todo/: config.py  main.py  models.py  output.py  repository.py  service.py
src/todo_cli/: cli.py  config.py  repository.py  service.py
tests/: test_cli.py  test_config.py  test_service.py
